--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,14 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
-  "exclude": [
     "node_modules",
     ".next",
     "supabase/functions/**"
-  ]
+  ],
+ // "exclude": [
+ //   "node_modules",
+ //  ".next",
+ //   "supabase/functions/**"
+ // ]
 }
+
