--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,14 +23,13 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-    "node_modules",
-    ".next",
-    "supabase/functions/**"
+    
   ],
- // "exclude": [
- //   "node_modules",
- //  ".next",
- //   "supabase/functions/**"
- // ]
+  "exclude": [
+    "node_modules",
+   ".next",
+    "supabase/functions/**"
+  ]
 }
+
 
