--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "gen:lessons": "tsx scripts/generateLessons.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -76,4 +77,5 @@
   }
 
 }
+
 
