--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
-    "gen:lessons": "tsx scripts/generateLessons.ts"
+    "gen:lessons": "tsx scripts/generateLessons.ts",
+    "prebuild": "npm run gen:lessons"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -62,7 +63,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "3.25.76"
+    "zod": "3.25.76",
+    "tsx": "^4.20.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
@@ -77,5 +79,6 @@
   }
 
 }
+
 
 
