--- a/.github/workflows/gen-lessons.yml
+++ b/.github/workflows/gen-lessons.yml
@@ -3,12 +3,14 @@ name: Generate lessons.generated.ts
 on:
   workflow_dispatch:
 
-jobs:
-  generate:
-    runs-on: ubuntu-latest
+permissions:
+  contents: write
 
+jobs:
+  gen:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Node
@@ -16,8 +18,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install dependencies
-        run: npm install
+      - name: Install deps
+        run: npm ci
 
       - name: Generate lessons
         env:
@@ -26,8 +28,8 @@ jobs:
 
       - name: Commit generated file
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add lib/lessons.generated.ts
-          git commit -m "Generate lessons.generated.ts" || echo "No changes"
+          git commit -m "chore: generate lessons.generated.ts" || echo "No changes to commit"
           git push
