--- a/.github/workflows/generate-lessons.yml
+++ b/.github/workflows/generate-lessons.yml
@@ -28,7 +28,7 @@ jobs:
           cache: npm
 
       - name: Install
-        run: npm ci
+        run: npm install
 
       - name: Generate lessons.generated.ts
         run: npm run gen:lessons
