--- a/.github/workflows/generate-lessons.yml
+++ b/.github/workflows/generate-lessons.yml
@@ -25,7 +25,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
 
       - name: Install
         run: npm install
@@ -37,14 +36,15 @@ jobs:
 
       - name: Commit and push generated file
         run: |
-          if [ -z "$(git status --porcelain)" ]; then
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add lib/lessons.generated.ts || true
+
+          if git diff --cached --quiet; then
             echo "No changes to commit."
             exit 0
           fi
 
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          git add lib/lessons.generated.ts
           git commit -m "chore: regenerate lessons.generated.ts"
           git push
