--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
-    "gen:lessons": "tsx scripts/generateLessons.ts",
+    // "gen:lessons": "tsx scripts/generateLessons.ts",
     "prebuild": "npm run gen:lessons"
   },
   "dependencies": {
@@ -79,6 +79,7 @@
   }
 
 }
+
 
 
 
