--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
-    // "gen:lessons": "tsx scripts/generateLessons.ts",
-    "prebuild": "npm run gen:lessons"
+    "gen:lessons": "tsx scripts/generateLessons.ts",
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -79,6 +78,7 @@
   }
 
 }
+
 
 
 
