--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "lint": "eslint .",
     "start": "next start",
-    "gen:lessons": "tsx scripts/generateLessons.ts",
+    "gen:lessons": "tsx scripts/generateLessons.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -78,6 +78,7 @@
   }
 
 }
+
 
 
 
